--- a/savedPages/output.html
+++ b/savedPages/output.html
@@ -1,10 +1,10 @@
 <table>
-  <tr><td>HTML elements partially supported by Browsr:
+  <tr><td>Welcome to this hyperlink test page! Link to the testing site:
   <tr><td>
     <table>
-      <tr><td><a href="a.html">a</a><td>Hyperlink anchors
-      <tr><td><a href="table.html">table</a><td>Tables
-      <tr><td><a href="tr.html">tr</a><td>Table rows
-      <tr><td><a href="td.html">td</a><td>Table cells containing table data
+      <tr><td><a href="goodwork.html">Working link</a><td>Fully working hyperlink
+      <tr><td><a href="thislinkisbroken">Broken link</a><td>Broken link
+      <tr><td><a href="brokenfile.html">Bad file</a><td>Working link but broken file
+      <tr><td><a href="onlyhyperlink.html">Hyperlink only</a><td>File with a hyperlink only
     </table>
 </table>
